Fixed spacing and added buttons to change days

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   height: 100%;
 }
 
-div#root {
+#root {
   height: 100%;
 }
 
